--- a/templates/default/invoice/invoiceedit.html
+++ b/templates/default/invoice/invoiceedit.html
@@ -3,7 +3,8 @@
 {block name=module_content}
 {$xajax}
 <!--// $Id$ //-->
-<H1>{$layout.pagetitle}</H1>
+<h1>{$layout.pagetitle}</h1>
+
 <script src="js/lms-ui-deadline-selection.js"></script>
 <script>
 
@@ -30,193 +31,214 @@
 	});
 
 </script>
+
 {$default_printpage = ConfigHelper::getConfig('invoices.default_printpage')}
 {$default_taxrate   = ConfigHelper::getConfig('phpui.default_taxrate')}
-<FORM NAME="setcustomer" id="setcustomer" METHOD="POST" ACTION="?m=invoiceedit&action=setcustomer">
-<INPUT type="submit" class="hiddenbtn">
-<INPUT type="HIDDEN" name="invoice[template]" value="{$invoice.template}">
-<input type="hidden" name="invoice[doctype]" value="{$invoice.doctype}">
-{if $invoice.proforma}
-<input type="hidden" name="invoice[proforma]" value="{$invoice.proforma}">
-{/if}
-<TABLE class="lmsbox">
-	<COLGROUP>
-		<COL style="width: 1%;">
-		<COL style="width: 99%;">
-	</COLGROUP>
-    <THEAD>
-	<TR>
-		<TD WIDTH="100%" COLSPAN="2">
-			<B>{trans("Main Information:")}</B>
-		</TD>
-	</TR>
-    </THEAD>
-    <TBODY>
-	<TR>
-		<TD class="bold nobr">
-			{trans("Invoice number:")}
-		</TD>
-		<TD class="nobr" id="invoicenumberplans">
-			{include file="invoice/invoicenumberplans.html" invoice=$invoice}
-		</TD>
-	</TR>
-	<TR>
-		<TD class="bold nobr">
-			{trans("Settlement date:")}
-		</TD>
-		<TD class="nobr">
-			{if ConfigHelper::checkPrivilege("invoice_consent_date")}
-				<INPUT type="text" name="invoice[cdate]" id="cdate" value="{$invoice.cdate|date_format:"%Y/%m/%d"}" size="12"
-					placeholder="{trans("yyyy/mm/dd")}" date-cdate="{$invoice.cdate}"
-					{tip class="lms-ui-date" text="Enter date of settlement in YYYY/MM/DD format (empty field means current date) or click to select it from calendar" trigger="cdate"}
-				>
-				{if $invoice.cdatewarning}
-					<INPUT TYPE="HIDDEN" NAME="invoice[cdatewarning]" VALUE="1">
-				{/if}
-			{else}
-				<input type="hidden" name="invoice[cdate]" value="{$invoice.cdate|date_format:"%Y/%m/%d"}">
-				{$invoice.cdate|date_format:"%Y/%m/%d"}
-			{/if}
-		</TD>
-	</TR>
-	<TR>
-		<TD class="bold nobr">
-			{trans("Sale date:")}
-		</TD>
-		<TD class="nobr">
-			{if ConfigHelper::checkPrivilege("invoice_sale_date")}
-				<INPUT type="text" name="invoice[sdate]" value="{$invoice.sdate|date_format:"%Y/%m/%d"}" size="12"
-					placeholder="{trans("yyyy/mm/dd")}"
-					{tip class="lms-ui-date" text="Enter date of sale in YYYY/MM/DD format (empty field means current date) or click to select it from calendar" trigger="sdate"}
-				>
-			{else}
-				<input type="hidden" name="invoice[sdate]" value="{$invoice.sdate|date_format:"%Y/%m/%d"}">
-				{$invoice.sdate|date_format:"%Y/%m/%d"}
-			{/if}
-		</TD>
-	</TR>
-	<TR>
-		<TD class="bold nobr">
-			{trans("Deadline:")}
-		</TD>
-		<TD class="nobr">
-			{deadline_selection name="invoice[deadline]" cdate_selector="#cdate" value=$invoice.deadline}
-		</TD>
-	</TR>
-	<TR>
-		<TD class="bold nobr">
-			{trans("Payment type (cash/transfer/etc):")}
-		</TD>
-		<TD class="nobr">
-			<SELECT name="invoice[paytype]" {tip text="Select payment type" trigger="paytype"}>
-				{foreach $_PAYTYPES as $key => $item}
-				<OPTION value="{$key}"{if $invoice.paytype==$key} selected{/if}>{trans($item)}</OPTION>
-				{/foreach}
-			</SELECT>
-		</TD>
-	</TR>
-	<TR>
-		<TD class="bold nobr">
-			{trans("Document flags:")}
-		</TD>
-		<TD class="nobr">
-			<label id="splitpayment" {tip text="translates into JPK MPP flag"}
-					{if empty($suggested_flags.splitpayment)} style="display: none;"{/if}>
-				<input type="checkbox" name="invoice[splitpayment]" value="1"
-						{if !empty($suggested_flags.splitpayment) && $invoice.splitpayment} checked{/if}>
-				{trans("split payment")}
-			</label>
-			<label {tip text="translates into JPK FP flag"}>
-				<input type="checkbox" name="invoice[flags][{$smarty.const.DOC_FLAG_RECEIPT}]" value="1"
-						{if $invoice.flags[$smarty.const.DOC_FLAG_RECEIPT]} checked{/if}>
-				{trans("<!invoice>receipt")}
-			</label>
-			<label id="telecomservice" {tip text="translates into JPK EE flag"}
-					{if empty($suggested_flags.telecomservice)} style="display: none;"{/if}>
-				<input type="checkbox" name="invoice[flags][{$smarty.const.DOC_FLAG_TELECOM_SERVICE}]" value="1"
-						{if $invoice.flags[$smarty.const.DOC_FLAG_TELECOM_SERVICE]} checked{/if}>
-				{trans("<!invoice>telecommunication service")}
-			</label>
-		</TD>
-	</TR>
-	<tr>
-		<td class="bold nobr">
-			{trans("Accounting")}
-		</td>
-		<td class="nobr">
-			<label>
-				<input type="radio" id="ingross" name="invoice[netflag]" value="0" {if !$invoice.netflag} checked{/if} {if $contents} disabled{/if}>
-				{trans("gross")}
-			</label>
-			<label>
-				<input type="radio" id="innet" name="invoice[netflag]" value="1" {if $invoice.netflag} checked{/if} {if $contents} disabled{/if}>
-				{trans("net")}
-			</label>
-		</td>
-	</tr>
-	<TR>
-		<TD class="bold nobr">
-			{trans("Customer:")}
-		</TD>
-		<TD class="nobr">
-			{if isset($customer.id)}
-				{customerlist form="setcustomer" customers=$customers selected=$customer.id version=2
-					selectname="customer" inputname="customerid" customOnChange="GetNumberPlans();customer_change();"
-					select_id="ownerid_select" input_id="ownerid_input" required=true}
-			{else}
-				{customerlist form="setcustomer" customers=$customers selected=$invoice.customerid version=2
-					selectname="customer" inputname="customerid" customOnChange="GetNumberPlans();customer_change();"
-					select_id="ownerid_select" input_id="ownerid_input" required=true}
-			{/if}
-		</TD>
-	</TR>
-	<TR>
-		<td class="bold nobr">
-			<label for="use_current_customer_data">{trans("Use current customer data:")}</label>
-		</td>
-		<TD class="nobr">
-			<input type="checkbox" id="use_current_customer_data" name="invoice[use_current_customer_data]" value="1"{if $invoice.use_current_customer_data} checked{/if} {tip text="Check it if you want to use current customer data"}>
-		</TD>
-	</TR>
-	<tr>
-		<td class="bold">{trans("Currency:")}</td>
-		<td>
-			{currency_selection selected=$invoice.currency elementname="invoice[currency]"}
-		</td>
-	</tr>
-	<tr>
-		<td class="bold">{trans("Recipient address:")}</td>
-		<td>
-			{if $invoice.customerid && $invoice.recipient_address_id }
-				{$selected_address_id = $invoice.recipient_address_id}
-			{else}
-				{$selected_address_id = null}
-			{/if}
-			{include file="customer/customeraddresses.html" id="customer_addresses" name="invoice[recipient_address_id]"
-				trigger="address_id" selected_address_id=$selected_address_id preselection=false}
-		</td>
-	</tr>
-    <tr>
-        <td class="bold">{trans("Comment:")}</td>
-        <td>
-            <TEXTAREA NAME="invoice[comment]" ROWS="4" COLS="50" {tip text="Enter invoice comment"}>{$invoice.comment}</TEXTAREA>
-        </td>
-    </tr>
-	<TR>
-		<TD class="lms-ui-box-buttons" colspan="2">
-			{button icon="save" label="Submit" onclick="saveheader();"}
-		</TD>
-	</TR>
-    </TBODY>
-</TABLE>
-</FORM>
+
+<form name="setcustomer" id="setcustomer" method="POST" action="?m=invoiceedit&action=setcustomer">
+	<input type="submit" class="hiddenbtn">
+	<input type="hidden" name="invoice[template]" value="{$invoice.template}">
+	<input type="hidden" name="invoice[doctype]" value="{$invoice.doctype}">
+	{if $invoice.proforma}
+		<input type="hidden" name="invoice[proforma]" value="{$invoice.proforma}">
+	{/if}
+
+	<table class="lmsbox">
+		<colgroup>
+			<col style="width: 1%;">
+			<col style="width: 99%;">
+		</colgroup>
+		<thead>
+			<tr>
+				<td width="100%" colspan="2">
+					<strong>{trans("Main Information:")}</strong>
+				</td>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td class="bold nobr">
+					{trans("Invoice number:")}
+				</td>
+				<td class="nobr" id="invoicenumberplans">
+					{include file="invoice/invoicenumberplans.html" invoice=$invoice}
+				</td>
+			</tr>
+			<tr>
+				<td class="bold nobr">
+					{trans("Settlement date:")}
+				</td>
+				<td class="nobr">
+					{if ConfigHelper::checkPrivilege("invoice_consent_date")}
+						<input type="text" name="invoice[cdate]" id="cdate" value="{$invoice.cdate|date_format:"%Y/%m/%d"}" size="12"
+							placeholder="{trans("yyyy/mm/dd")}" date-cdate="{$invoice.cdate}"
+							{tip class="lms-ui-date" text="Enter date of settlement in YYYY/MM/DD format (empty field means current date) or click to select it from calendar" trigger="cdate"}
+						>
+						{if $invoice.cdatewarning}
+							<input type="hidden" name="invoice[cdatewarning]" value="1">
+						{/if}
+					{else}
+						<input type="hidden" name="invoice[cdate]" value="{$invoice.cdate|date_format:"%Y/%m/%d"}">
+						{$invoice.cdate|date_format:"%Y/%m/%d"}
+					{/if}
+				</td>
+			</tr>
+			<tr>
+				<td class="bold nobr">
+					{trans("Sale date:")}
+				</td>
+				<td class="nobr">
+					{if ConfigHelper::checkPrivilege("invoice_sale_date")}
+						<input type="text" name="invoice[sdate]" value="{$invoice.sdate|date_format:"%Y/%m/%d"}" size="12"
+							placeholder="{trans("yyyy/mm/dd")}"
+							{tip class="lms-ui-date" text="Enter date of sale in YYYY/MM/DD format (empty field means current date) or click to select it from calendar" trigger="sdate"}
+						>
+					{else}
+						<input type="hidden" name="invoice[sdate]" value="{$invoice.sdate|date_format:"%Y/%m/%d"}">
+						{$invoice.sdate|date_format:"%Y/%m/%d"}
+					{/if}
+				</td>
+			</tr>
+			<tr>
+				<td class="bold nobr">
+					{trans("Deadline:")}
+				</td>
+				<td class="nobr">
+					{deadline_selection name="invoice[deadline]" cdate_selector="#cdate" value=$invoice.deadline}
+				</td>
+			</tr>
+			<tr>
+				<td class="bold nobr">
+					{trans("Payment type (cash/transfer/etc):")}
+				</td>
+				<td class="nobr">
+					<select name="invoice[paytype]" {tip text="Select payment type" trigger="paytype"}>
+						{foreach $_PAYTYPES as $key => $item}
+							<option value="{$key}"{if $invoice.paytype==$key} selected{/if}>{trans($item)}</option>
+						{/foreach}
+					</select>
+				</td>
+			</tr>
+			<tr>
+				<td class="bold nobr">
+					{trans("Document flags:")}
+				</td>
+				<td class="nobr">
+					<label id="splitpayment" {tip text="translates into JPK MPP flag"}
+							{if empty($suggested_flags.splitpayment)} style="display: none;"{/if}
+					>
+						<input type="checkbox" name="invoice[splitpayment]" value="1"
+								{if !empty($suggested_flags.splitpayment) && $invoice.splitpayment} checked{/if}
+						>
+						{trans("split payment")}
+					</label>
+					<label {tip text="translates into JPK FP flag"}>
+						<input type="checkbox" name="invoice[flags][{$smarty.const.DOC_FLAG_RECEIPT}]" value="1"
+								{if $invoice.flags[$smarty.const.DOC_FLAG_RECEIPT]} checked{/if}
+						>
+						{trans("<!invoice>receipt")}
+					</label>
+					<label id="telecomservice" {tip text="translates into JPK EE flag"}
+							{if empty($suggested_flags.telecomservice)} style="display: none;"{/if}
+					>
+						<input type="checkbox" name="invoice[flags][{$smarty.const.DOC_FLAG_TELECOM_SERVICE}]" value="1"
+								{if $invoice.flags[$smarty.const.DOC_FLAG_TELECOM_SERVICE]} checked{/if}
+						>
+						{trans("<!invoice>telecommunication service")}
+					</label>
+				</td>
+			</tr>
+			<tr>
+				<td class="bold nobr">
+					{trans("Accounting")}
+				</td>
+				<td class="nobr">
+					<label>
+						<input type="radio" id="ingross" name="invoice[netflag]" value="0"
+								{if !$invoice.netflag} checked{/if} {if $contents} disabled{/if}
+						>
+						{trans("gross")}
+					</label>
+					<label>
+						<input type="radio" id="innet" name="invoice[netflag]" value="1"
+								{if $invoice.netflag} checked{/if} {if $contents} disabled{/if}
+						>
+						{trans("net")}
+					</label>
+				</td>
+			</tr>
+			<tr>
+				<td class="bold nobr">
+					{trans("Customer:")}
+				</td>
+				<td class="nobr">
+					{if isset($customer.id)}
+						{customerlist form="setcustomer" customers=$customers selected=$customer.id version=2
+							selectname="customer" inputname="customerid" customOnChange="GetNumberPlans();customer_change();"
+							select_id="ownerid_select" input_id="ownerid_input" required=true}
+					{else}
+						{customerlist form="setcustomer" customers=$customers selected=$invoice.customerid version=2
+							selectname="customer" inputname="customerid" customOnChange="GetNumberPlans();customer_change();"
+							select_id="ownerid_select" input_id="ownerid_input" required=true}
+					{/if}
+				</td>
+			</tr>
+			<tr>
+				<td class="bold nobr">
+					<label for="use_current_customer_data">{trans("Use current customer data:")}</label>
+				</td>
+				<td class="nobr">
+					<input type="checkbox" id="use_current_customer_data" name="invoice[use_current_customer_data]" value="1"
+							{if $invoice.use_current_customer_data} checked{/if}
+							{tip text="Check it if you want to use current customer data"}
+					>
+				</td>
+			</tr>
+			<tr>
+				<td class="bold">
+					{trans("Currency:")}
+				</td>
+				<td>
+					{currency_selection selected=$invoice.currency elementname="invoice[currency]"}
+				</td>
+			</tr>
+			<tr>
+				<td class="bold">
+					{trans("Recipient address:")}
+				</td>
+				<td>
+					{if $invoice.customerid && $invoice.recipient_address_id }
+						{$selected_address_id = $invoice.recipient_address_id}
+					{else}
+						{$selected_address_id = null}
+					{/if}
+					{include file="customer/customeraddresses.html" id="customer_addresses" name="invoice[recipient_address_id]"
+						trigger="address_id" selected_address_id=$selected_address_id preselection=false}
+				</td>
+			</tr>
+			<tr>
+				<td class="bold">
+					{trans("Comment:")}
+				</td>
+				<td>
+					<textarea name="invoice[comment]" rows="4" cols="50" {tip text="Enter invoice comment"}>{$invoice.comment}</textarea>
+				</td>
+			</tr>
+			<tr>
+				<td class="lms-ui-box-buttons" colspan="2">
+					{button icon="save" label="Submit" onclick="saveheader();"}
+				</td>
+			</tr>
+		</tbody>
+	</table>
+</form>
 
 {include file="invoice/invoicecontents.html"}
 
-<SCRIPT>
+<script>
 
-    var customer_addresses = new LmsUiIconSelectMenu( "#customer_addresses" );
-    var recipient_addr;
+	var customer_addresses = new LmsUiIconSelectMenu( "#customer_addresses" );
+	var recipient_addr;
 
 	function updateDocumentFlags() {
 		$.ajax({
@@ -241,35 +263,35 @@
 	}
 
 	/*!
-     * \brief Update customer addresses list on select change.
-     */
-    function customer_change() {
-        getCustomerAddresses($("#ownerid_input").val(), function(addresses) {
-            {if $invoice.customerid && isset($invoice.recipient_address) }
+	 * \brief Update customer addresses list on select change.
+	 */
+	function customer_change() {
+		getCustomerAddresses($("#ownerid_input").val(), function(addresses) {
+			{if $invoice.customerid && isset($invoice.recipient_address) }
 				customer_addresses.setAddressList( recipient_addr, false );
 				$( '#customer_addresses' ).val( {$invoice.recipient_address_id} );
-            {else}
-	            customer_addresses.setAddressList();
-            {/if}
+			{else}
+				customer_addresses.setAddressList();
+			{/if}
 
-            customer_addresses.appendAddressList( addresses, false );
-            customer_addresses.refresh();
-        });
-        updateDocumentFlags()
-    }
-
-{if $invoice.customerid && isset($invoice.recipient_address)}
-	recipient_addr = [ JSON.parse(Base64.decode('{$invoice.recipient_address}')) ];
-{/if}
-    customer_addresses.init();
-
-	$(function() {
-		$('form[name="setcustomer"] [name="invoice[number]"]').focus();
-
-		$('#cdate').change(function() {
-			updateDocumentFlags();
+			customer_addresses.appendAddressList( addresses, false );
+			customer_addresses.refresh();
 		});
-	});
+		updateDocumentFlags()
+	}
 
-</SCRIPT>
+	{if $invoice.customerid && isset($invoice.recipient_address)}
+		recipient_addr = [ JSON.parse(Base64.decode('{$invoice.recipient_address}')) ];
+	{/if}
+		customer_addresses.init();
+
+		$(function() {
+			$('form[name="setcustomer"] [name="invoice[number]"]').focus();
+
+			$('#cdate').change(function() {
+				updateDocumentFlags();
+			});
+		});
+
+</script>
 {/block}
