--- a/templates/default/invoice/invoicenew.html
+++ b/templates/default/invoice/invoicenew.html
@@ -3,21 +3,24 @@
 {block name=module_content}
 {$xajax}
 <!--// $Id$ //-->
-<H1>{$layout.pagetitle}</H1>
+<h1>{$layout.pagetitle}</h1>
+
 {if $newinvoice}
-<SCRIPT>
+	<script>
 
-    window.open('?m=invoice&id={$newinvoice.invoice}&which={$newinvoice.which}');
+		window.open('?m=invoice&id={$newinvoice.invoice}&which={$newinvoice.which}');
 
-</SCRIPT>
+	</script>
 {/if}
 <script src="js/lms-ui-deadline-selection.js"></script>
 <script>
 
-    function saveheader() {
-		if (document.setcustomer.customer)
-			if (document.setcustomer.customer.value != 0)
+	function saveheader() {
+		if (document.setcustomer.customer) {
+			if (document.setcustomer.customer.value != 0) {
 				document.setcustomer.customerid.value = document.setcustomer.customer.value;
+			}
+		}
 
 		$('#ingross').prop('disabled', false);
 		$('#innet').prop('disabled', false);
@@ -33,192 +36,212 @@
 	}
 
 </script>
+
 {$default_printpage = ConfigHelper::getConfig('invoices.default_printpage')}
 {$default_taxrate   = ConfigHelper::getConfig('phpui.default_taxrate')}
+
 {if isset($customer.id)}
-{$customerid = $customer.id}
+	{$customerid = $customer.id}
 {else}
-{$customerid = $invoice.customerid}
+	{$customerid = $invoice.customerid}
 {/if}
+
 {block name="invoicenew-header"}
-<FORM name="setcustomer" id="setcustomer" method="POST" action="?m=invoicenew&action=setcustomer">
-<p style="display: none;">
-<INPUT type="submit" class="hiddenbtn">
-</p>
-<input type="hidden" name="invoice[proforma]" value="{$invoice.proforma}">
-<input type="hidden" name="invoice[proformaid]" value="{$invoice.proformaid}">
-<input type="hidden" name="invoice[proformanumber]" value="{$invoice.proformanumber}">
-<TABLE class="lmsbox">
-	<colgroup>
-		<col style="width: 1%;">
-		<col style="width: 99%;">
-	</colgroup>
-	<THEAD>
-	<TR>
-		<th scope="col" colspan="2">
-			{trans("Main Information:")}
-		</th>
-	</TR>
-	</THEAD>
-	<TBODY>
-	<TR>
-		<TD class="bold nobr">
-			{trans("Invoice number:")}
-		</TD>
-		<TD class="nobr" id="invoicenumberplans">
-			{include file="invoice/invoicenumberplans.html" invoice=$invoice}
-		</TD>
-	</TR>
-	<TR>
-		<TD class="bold nobr">
-			{trans("Settlement date:")}
-		</TD>
-		<TD class="nobr">
-			{if ConfigHelper::checkPrivilege("invoice_consent_date")}
-				<INPUT type="text" name="invoice[cdate]" id="cdate" value="{$invoice.cdate|date_format:"%Y/%m/%d"}" size="12"
-					placeholder="{trans("yyyy/mm/dd")}" data-cdate="{$invoice.cdate}"
-					{tip class="lms-ui-date" text="Enter date of settlement in YYYY/MM/DD format (empty field means current date) or click to select it from calendar" trigger="cdate"}
-				>
-				{if $invoice.cdatewarning}
-					<INPUT type="hidden" name="invoice[cdatewarning]" value="1">
+	<form name="setcustomer" id="setcustomer" method="POST" action="?m=invoicenew&action=setcustomer">
+		<p style="display: none;">
+			<input type="submit" class="hiddenbtn">
+		</p>
+		<input type="hidden" name="invoice[proforma]" value="{$invoice.proforma}">
+		<input type="hidden" name="invoice[proformaid]" value="{$invoice.proformaid}">
+		<input type="hidden" name="invoice[proformanumber]" value="{$invoice.proformanumber}">
+
+		<table class="lmsbox">
+			<colgroup>
+				<col style="width: 1%;">
+				<col style="width: 99%;">
+			</colgroup>
+			<thead>
+				<tr>
+					<th scope="col" colspan="2">
+						{trans("Main Information:")}
+					</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td class="bold nobr">
+						{trans("Invoice number:")}
+					</td>
+					<td class="nobr" id="invoicenumberplans">
+						{include file="invoice/invoicenumberplans.html" invoice=$invoice}
+					</td>
+				</tr>
+				<tr>
+					<td class="bold nobr">
+						{trans("Settlement date:")}
+					</td>
+					<td class="nobr">
+						{if ConfigHelper::checkPrivilege("invoice_consent_date")}
+							<input type="text" name="invoice[cdate]" id="cdate" value="{$invoice.cdate|date_format:"%Y/%m/%d"}" size="12"
+								placeholder="{trans("yyyy/mm/dd")}" data-cdate="{$invoice.cdate}"
+								{tip class="lms-ui-date" text="Enter date of settlement in YYYY/MM/DD format (empty field means current date) or click to select it from calendar" trigger="cdate"}
+							>
+							{if $invoice.cdatewarning}
+								<input type="hidden" name="invoice[cdatewarning]" value="1">
+							{/if}
+						{else}
+							<input type="hidden" name="invoice[cdate]" id="cdate" value="{$invoice.cdate|date_format:"%Y/%m/%d"}">
+							{$invoice.cdate|date_format:"%Y/%m/%d"}
+						{/if}
+					</td>
+				</tr>
+				<tr>
+					<td class="bold nobr">
+						{trans("Sale date:")}
+					</td>
+					<td class="nobr">
+						{if ConfigHelper::checkPrivilege("invoice_sale_date")}
+							<input type="text" name="invoice[sdate]" value="{$invoice.sdate|date_format:"%Y/%m/%d"}" size="12"
+								placeholder="{trans("yyyy/mm/dd")}"
+								{tip class="lms-ui-date" text="Enter date of sale in YYYY/MM/DD format (empty field means current date) or click to select it from calendar" trigger="sdate"}
+							>
+						{else}
+							<input type="hidden" name="invoice[sdate]" value="{$invoice.sdate|date_format:"%Y/%m/%d"}">
+							{$invoice.sdate|date_format:"%Y/%m/%d"}
+						{/if}
+					</td>
+				</tr>
+				<tr>
+					<td class="bold nobr">
+						{trans("Deadline:")}
+					</td>
+					<td class="nobr">
+						{deadline_selection name="invoice[deadline]" cdate_selector="#cdate" value=$invoice.deadline}
+					</td>
+				</tr>
+				<tr>
+					<td class="bold nobr">
+						{trans("Payment type:")}
+					</td>
+					<td class="nobr">
+						{paytypes elemname="invoice[paytype]" selected=$invoice.paytype}
+					</td>
+				</tr>
+				<tr>
+					<td class="bold nobr">
+						{trans("Document flags:")}
+					</td>
+					<td class="nobr">
+						<label id="splitpayment" {tip text="translates into JPK MPP flag"}
+								{if empty($suggested_flags.splitpayment)} style="display: none;"{/if}
+						>
+							<input type="checkbox" name="invoice[splitpayment]" value="1"
+									{if !empty($suggested_flags.splitpayment) && $invoice.splitpayment} checked{/if}
+							>
+							{trans("split payment")}
+						</label>
+						<label {tip text="translates into JPK FP flag"}>
+							<input type="checkbox" name="invoice[flags][{$smarty.const.DOC_FLAG_RECEIPT}]" value="1"
+									{if $invoice.flags[$smarty.const.DOC_FLAG_RECEIPT]} checked{/if}
+							>
+							{trans("<!invoice>receipt")}
+						</label>
+						<label id="telecomservice" {tip text="translates into JPK EE flag"}
+								{if empty($suggested_flags.telecomservice)} style="display: none;"{/if}
+						>
+							<input type="checkbox" name="invoice[flags][{$smarty.const.DOC_FLAG_TELECOM_SERVICE}]" value="1"
+									{if $invoice.flags[$smarty.const.DOC_FLAG_TELECOM_SERVICE]} checked{/if}
+							>
+							{trans("<!invoice>telecommunication service")}
+						</label>
+					</td>
+				</tr>
+				<tr>
+					<td class="bold nobr">
+						{trans("Accounting")}
+					</td>
+					<td class="nobr">
+						<label>
+							<input type="radio" id="ingross" name="invoice[netflag]" value="0"
+									{if !$invoice.netflag} checked{/if}{if $contents} disabled{/if}
+							>
+							{trans("gross")}
+						</label>
+						<label>
+							<input type="radio" id="innet" name="invoice[netflag]" value="1"
+									{if $invoice.netflag} checked{/if}{if $contents} disabled{/if}
+							>
+							{trans("net")}
+						</label>
+					</td>
+				</tr>
+				{if isset($invoice.proformaid) && !empty($invoice.proformaid)}
+				<tr>
+					<td class="bold nobr">
+						<label for="preserve-proforma">
+							{trans("Preserve pro forma")}
+						</label>
+					</td>
+					<td class="nobr">
+						<input type="checkbox" id="preserve-proforma" name="invoice[preserve-proforma]" value="1"
+								{if isset($invoice['preserve-proforma']) && !empty($invoice['preserve-proforma'])} checked{/if}
+						>
+					</td>
+				</tr>
 				{/if}
-			{else}
-				<input type="hidden" name="invoice[cdate]" id="cdate" value="{$invoice.cdate|date_format:"%Y/%m/%d"}">
-				{$invoice.cdate|date_format:"%Y/%m/%d"}
-			{/if}
-		</TD>
-	</TR>
-	<TR>
-		<TD class="bold nobr">
-			{trans("Sale date:")}
-		</TD>
-		<TD class="nobr">
-			{if ConfigHelper::checkPrivilege("invoice_sale_date")}
-				<INPUT type="text" name="invoice[sdate]" value="{$invoice.sdate|date_format:"%Y/%m/%d"}" size="12"
-					placeholder="{trans("yyyy/mm/dd")}"
-					{tip class="lms-ui-date" text="Enter date of sale in YYYY/MM/DD format (empty field means current date) or click to select it from calendar" trigger="sdate"}
-				>
-			{else}
-				<input type="hidden" name="invoice[sdate]" value="{$invoice.sdate|date_format:"%Y/%m/%d"}">
-				{$invoice.sdate|date_format:"%Y/%m/%d"}
-			{/if}
-		</TD>
-	</TR>
-	<TR>
-		<TD class="bold nobr">
-			{trans("Deadline:")}
-		</TD>
-		<TD class="nobr">
-			{deadline_selection name="invoice[deadline]" cdate_selector="#cdate" value=$invoice.deadline}
-		</TD>
-	</TR>
-	<TR>
-		<TD class="bold nobr">
-			{trans("Payment type:")}
-		</TD>
-		<TD class="nobr">
-			{paytypes elemname="invoice[paytype]" selected=$invoice.paytype}
-		</TD>
-	</TR>
-	<TR>
-		<TD class="bold nobr">
-			{trans("Document flags:")}
-		</TD>
-		<TD class="nobr">
-			<label id="splitpayment" {tip text="translates into JPK MPP flag"}
-					{if empty($suggested_flags.splitpayment)} style="display: none;"{/if}>
-				<input type="checkbox" name="invoice[splitpayment]" value="1"
-						{if !empty($suggested_flags.splitpayment) && $invoice.splitpayment} checked{/if}>
-				{trans("split payment")}
-			</label>
-			<label {tip text="translates into JPK FP flag"}>
-				<input type="checkbox" name="invoice[flags][{$smarty.const.DOC_FLAG_RECEIPT}]" value="1"
-						{if $invoice.flags[$smarty.const.DOC_FLAG_RECEIPT]} checked{/if}>
-				{trans("<!invoice>receipt")}
-			</label>
-			<label id="telecomservice" {tip text="translates into JPK EE flag"}
-					{if empty($suggested_flags.telecomservice)} style="display: none;"{/if}>
-				<input type="checkbox" name="invoice[flags][{$smarty.const.DOC_FLAG_TELECOM_SERVICE}]" value="1"
-						{if $invoice.flags[$smarty.const.DOC_FLAG_TELECOM_SERVICE]} checked{/if}>
-				{trans("<!invoice>telecommunication service")}
-			</label>
-		</TD>
-	</TR>
-	<tr>
-		<td class="bold nobr">
-			{trans("Accounting")}
-		</td>
-		<td class="nobr">
-			<label>
-				<input type="radio" id="ingross" name="invoice[netflag]" value="0" {if !$invoice.netflag} checked{/if}{if $contents} disabled{/if}>
-				{trans("gross")}
-			</label>
-			<label>
-				<input type="radio" id="innet" name="invoice[netflag]" value="1" {if $invoice.netflag} checked{/if}{if $contents} disabled{/if}>
-				{trans("net")}
-			</label>
-		</td>
-	</tr>
-	{if isset($invoice.proformaid) && !empty($invoice.proformaid)}
-	<TR>
-		<TD class="bold nobr">
-			<label for="preserve-proforma">
-				{trans("Preserve pro forma")}
-			</label>
-		</TD>
-		<TD class="nobr">
-			<input type="checkbox" id="preserve-proforma" name="invoice[preserve-proforma]" value="1"
-					{if isset($invoice['preserve-proforma']) && !empty($invoice['preserve-proforma'])} checked{/if}>
-		</TD>
-	</TR>
-	{/if}
-	<TR>
-		<TD class="bold nobr">
-			{trans("Customer:")}
-		</TD>
-		<TD class="nobr">
-			{customerlist form="setcustomer" customers=$customers selected=$customerid selectname="customer" version="2"
-				inputname="customerid" customOnChange="GetNumberPlans();customer_change();"
-				select_id="ownerid_select" input_id="ownerid_input" required=true}
-		</TD>
-	</TR>
-	<tr>
-		<td class="bold">{trans("Currency:")}</td>
-		<td>
-			{currency_selection selected=$invoice.currency elementname="invoice[currency]"}
-		</td>
-	</tr>
-	<tr>
-		<td class="bold">{trans("Recipient address:")}</td>
-		<td>
-			{if $invoice.customerid && $invoice.recipient_address_id }
-				{$selected_address_id = $invoice.recipient_address_id}
-			{else}
-				{$selected_address_id = null}
-			{/if}
-			{include file="customer/customeraddresses.html" id="customer_addresses" name="invoice[recipient_address_id]"
-				trigger="address_id" selected_address_id=$selected_address_id preselection=false}
-		</td>
-	</tr>
-	<tr>
-		<td class="bold">{trans("Comment:")}</td>
-		<td>
-			<TEXTAREA NAME="invoice[comment]" ROWS="4" COLS="50" {tip text="Enter invoice comment"}>{$invoice.comment}</TEXTAREA>
-		</td>
-	</tr>
-	<TR>
-		<TD class="lms-ui-box-buttons" colspan="2">
-			{button icon="save" label="Submit" onclick="saveheader();"}
-		</TD>
-	</TR>
-    </TBODY>
-</TABLE>
-</FORM>
+				<tr>
+					<td class="bold nobr">
+						{trans("Customer:")}
+					</td>
+					<td class="nobr">
+						{customerlist form="setcustomer" customers=$customers selected=$customerid selectname="customer" version="2"
+							inputname="customerid" customOnChange="GetNumberPlans();customer_change();"
+							select_id="ownerid_select" input_id="ownerid_input" required=true}
+					</td>
+				</tr>
+				<tr>
+					<td class="bold">
+						{trans("Currency:")}
+					</td>
+					<td>
+						{currency_selection selected=$invoice.currency elementname="invoice[currency]"}
+					</td>
+				</tr>
+				<tr>
+					<td class="bold">
+						{trans("Recipient address:")}
+					</td>
+					<td>
+						{if $invoice.customerid && $invoice.recipient_address_id }
+							{$selected_address_id = $invoice.recipient_address_id}
+						{else}
+							{$selected_address_id = null}
+						{/if}
+						{include file="customer/customeraddresses.html" id="customer_addresses" name="invoice[recipient_address_id]"
+							trigger="address_id" selected_address_id=$selected_address_id preselection=false}
+					</td>
+				</tr>
+				<tr>
+					<td class="bold">
+						{trans("Comment:")}
+					</td>
+					<td>
+						<textarea NAME="invoice[comment]" rows="4" cols="50" {tip text="Enter invoice comment"}>{$invoice.comment}</textarea>
+					</td>
+				</tr>
+				<tr>
+					<td class="lms-ui-box-buttons" colspan="2">
+						{button icon="save" label="Submit" onclick="saveheader();"}
+					</td>
+				</tr>
+			</tbody>
+		</table>
+	</form>
 {/block}
 
 {if $covenantlist && !$invoice.netflag}
-	<FORM name="additemlist" method="POST" action="?m=invoicenew&action=additemlist">
-		<TABLE class="lmsbox lms-ui-background-cycle">
+	<form name="additemlist" method="POST" action="?m=invoicenew&action=additemlist">
+		<table class="lmsbox lms-ui-background-cycle">
 			<colgroup>
 				<col style="width: 1%;">
 				<col style="width: 92%;">
@@ -238,7 +261,7 @@
 						{trans("Invoiceless liabilities:")}
 					</td>
 				</tr>
-				<TR>
+				<tr>
 					<td scope="col">{trans("Date:")}</td>
 					<td scope="col">{trans("Name of product, commodity or service:")}</td>
 					<td scope="col" class="nobr">
@@ -253,13 +276,13 @@
 					<td scope="col" class="text-right nobr">{trans("Tax:")}</td>
 					<td scope="col" class="text-right nobr">{trans("Gross Value:")}</td>
 					<td scope="col">&nbsp;</td>
-				</TR>
+				</tr>
 			</thead>
 			{cycle values="light,lucid" print=false}
 			{section name=covenantlist loop=$covenantlist}
-				<TR class="highlight {cycle}">
-					<TD class="nobr">{$covenantlist[covenantlist].time|date_format:"%Y/%m/%d"}</TD>
-					<TD>{$covenantlist[covenantlist].comment|escape}</TD>
+				<tr class="highlight {cycle}">
+					<td class="nobr">{$covenantlist[covenantlist].time|date_format:"%Y/%m/%d"}</td>
+					<td>{$covenantlist[covenantlist].comment|escape}</td>
 					<td>
 						<select name="l_servicetype[{$covenantlist[covenantlist].cashid}]">
 							<option value="">{trans("- none -")}</option>
@@ -271,32 +294,33 @@
 						{tax_category_selection elementname="l_taxcategory[{$covenantlist[covenantlist].cashid}]"
 							tip="Select tax category"}
 					</td>
-					<TD class="text-right"><INPUT type="text" name="l_prodid[{$covenantlist[covenantlist].cashid}]" value="{ConfigHelper::getConfig('phpui.default_prodid', '', true)}" size="6"></TD>
-					<TD class="text-right"><INPUT type="text" name="l_count[{$covenantlist[covenantlist].cashid}]" value="1" size="3"></TD>
-					<TD class="text-right"><INPUT type="text" name="l_jm[{$covenantlist[covenantlist].cashid}]" value="{trans(ConfigHelper::getConfig('payments.default_unit_name'))}" size="3"></TD>
-					<TD class="text-right nobr">{moneyf($covenantlist[covenantlist].net, $covenantlist[covenantlist].currency)}</TD>
-					<TD class="text-right nobr">{$covenantlist[covenantlist].tax}</TD>
-					<TD class="text-right nobr">{moneyf($covenantlist[covenantlist].value, $covenantlist[covenantlist].currency)}</TD>
-					<TD class="text-right">
-						<INPUT TYPE="checkbox" NAME="marks[]" VALUE="{$covenantlist[covenantlist].cashid}">
-					</TD>
-				</TR>
+					<td class="text-right"><input type="text" name="l_prodid[{$covenantlist[covenantlist].cashid}]" value="{ConfigHelper::getConfig('phpui.default_prodid', '', true)}" size="6"></td>
+					<td class="text-right"><input type="text" name="l_count[{$covenantlist[covenantlist].cashid}]" value="1" size="3"></td>
+					<td class="text-right"><input type="text" name="l_jm[{$covenantlist[covenantlist].cashid}]" value="{trans(ConfigHelper::getConfig('payments.default_unit_name'))}" size="3"></td>
+					<td class="text-right nobr">{moneyf($covenantlist[covenantlist].net, $covenantlist[covenantlist].currency)}</td>
+					<td class="text-right nobr">{$covenantlist[covenantlist].tax}</td>
+					<td class="text-right nobr">{moneyf($covenantlist[covenantlist].value, $covenantlist[covenantlist].currency)}</td>
+					<td class="text-right">
+						<input TYPE="checkbox" NAME="marks[]" VALUE="{$covenantlist[covenantlist].cashid}">
+					</td>
+				</tr>
 			{/section}
-			<TR class="lms-ui-button-panel">
-				<TD colspan="2" class="nobr">
-					<INPUT type="checkbox" name="allbox" id="allbox" onchange="CheckAll('additemlist', this)" value="1"><label for="allbox">{trans("Check All")}</label>
-				</TD>
-				<TD class="text-right nobr" colspan="8">
+			<tr class="lms-ui-button-panel">
+				<td colspan="2" class="nobr">
+					<input type="checkbox" name="allbox" id="allbox" onchange="CheckAll('additemlist', this)" value="1">
+					<label for="allbox">{trans("Check All")}</label>
+				</td>
+				<td class="text-right nobr" colspan="8">
 					{button icon="save" label="Add items" onclick="document.additemlist.submit();"}
-				</TD>
-			</TR>
-		</TABLE>
-	</FORM>
+				</td>
+			</tr>
+		</table>
+	</form>
 {/if}
 
 {include file="invoice/invoicecontents.html"}
 
-<SCRIPT>
+<script>
 
 	var customer_addresses = new LmsUiIconSelectMenu( "#customer_addresses" );
 
@@ -344,5 +368,5 @@
 		});
 	});
 
-</SCRIPT>
+</script>
 {/block}
