devel: fix translation for net calculations

--- a/templates/default/customer/customerassignmenthelper.html
+++ b/templates/default/customer/customerassignmenthelper.html
@@ -481,7 +481,7 @@
 												<label>
 													<input type="checkbox" id="netflag" name="{$variable_prefix}[netflag]" value="1"
 														{tip text="Billing according to the net price"}>
-													<span class="lms-ui-label">{trans('according in net')}</span>
+													<span class="lms-ui-label">{trans('calculated from net')}</span>
 												</label>
 											</td>
 										</tr>
