--- a/templates/default/tariff/tariffedit.html
+++ b/templates/default/tariff/tariffedit.html
@@ -115,7 +115,7 @@
                                                             <label>
                                                                 <input type="checkbox" id="netflag" name="tariff[netflag]" value="1" {if $tariff.netflag} checked{/if}
                                                                         {tip text="Billing according to the net price"}>
-                                                                {trans('according in net')}
+                                                                {trans('calculated from net')}
                                                             </label>
                                                         </td>
                                                     </tr>
