--- a/templates/default/tariff/tariffinfo.html
+++ b/templates/default/tariff/tariffinfo.html
@@ -129,9 +129,9 @@
                                                     </td>
                                                     <td rowspan="2">
                                                         {if $tariff.netflag}
-                                                            ({trans("according in net")})
+                                                            ({trans("calculated from net")})
                                                         {else}
-                                                            ({trans("according in gross")})
+                                                            ({trans("calculated from gross")})
                                                         {/if}
                                                     </td>
                                                 </tr>
