--- a/templates/default/tariff/tariffadd.html
+++ b/templates/default/tariff/tariffadd.html
@@ -88,7 +88,7 @@
 															<label>
 																<input type="checkbox" id="netflag" name="tariff[netflag]" value="1" {if isset($tariff.netflag) && !empty($tariff.netflag)} checked{/if}
 																		{tip text="Billing according to the net price"}>
-																{trans('according in net')}
+																{trans('calculated from net')}
 															</label>
 														</td>
 													</tr>
