enhancement: implemented identity document expiration date (LMS+ #1891)

--- a/templates/default/customer/customereditbox.html
+++ b/templates/default/customer/customereditbox.html
@@ -38,6 +38,31 @@
 		cursor: pointer;
 	}
 
+	#identity-document-box .identity-document-properties {
+		display: flex;
+		flex-direction: column;
+		flex-wrap: wrap;
+	}
+
+	#identity-document-box .identity-document-property {
+		display: flex;
+		flex-direction: column;
+		flex-wrap: wrap;
+	}
+
+	#identity-document-box .identity-document-property > * {
+		margin-top: 0.25em;
+		margin-bottom: 0.25em;
+	}
+
+	#identity-document-box .identity-document-property > input[type] {
+		margin-left: 0;
+	}
+
+	#identity-document-box .identity-document-property > select {
+		margin-left: 0;
+	}
+
 </style>
 
 <FORM name="customeredit" id="customeredit" method="post" action="?m=customeredit&id={$customerinfo.id}{if $recover}&action=recover{/if}">
@@ -309,23 +334,37 @@
 									<COL style="width: 1%;">
 									<COL style="width: 99%;">
 								</COLGROUP>
-								<TR>
-									<TD class="nobr">{trans("Identity type")}</TD>
-									<TD>
-										{identitytypes elemname="customerdata[ict]" selected=$customerinfo.ict
-											tip="" trigger="ict"}
-									</TD>
-								</TR>
-								<TR>
-									<TD class="nobr">{trans("Identity number")}</TD>
-									<TD>
-										{if $customerinfo.icnwarning}
-											<input type="hidden" name="customerdata[icnwarning]" value="1">
-										{/if}
-										<input type="text" value="{$customerinfo.icn}" name="customerdata[icn]" size="30"
-											{tip trigger="icn"}>
-									</TD>
-								</TR>
+								<tr>
+									<td class="nobr" colspan="2">
+										<fieldset id="identity-document-box">
+											<legend class="bold">
+												{trans("Identity document")}
+											</legend>
+											<div class="identity-document-properties">
+												<label class="identity-document-property">
+													<span>{trans("Type")}</span>
+													{identitytypes elemname="customerdata[ict]" selected=$customerinfo.ict
+														tip="" trigger="ict"}
+												</label>
+												<label class="identity-document-property">
+													<span>{trans("Number")}</span>
+													{if $customerinfo.icnwarning}
+														<input type="hidden" name="customerdata[icnwarning]" value="1">
+													{/if}
+													<input type="text" value="{$customerinfo.icn}" name="customerdata[icn]" size="30"
+														{tip trigger="icn"}>
+												</label>
+												<label class="identity-document-property">
+													<span>{trans("Expires")}</span>
+													<input type="text" value="{$customerinfo.icexpires}"
+														name="customerdata[icexpires]" size="10"
+														class="lms-ui-date lms-ui-date-unix"
+														{tip trigger="icexpires"}>
+												</label>
+											</div>
+										</fieldset>
+									</td>
+								</tr>
 								<TR>
 									<TD>{trans("SSN")}</TD>
 									<TD>
