enhancement: implemented identity document expiration date - small visual fixes (LMS+ #1891)

--- a/templates/default/customer/customereditbox.html
+++ b/templates/default/customer/customereditbox.html
@@ -38,6 +38,10 @@
 		cursor: pointer;
 	}
 
+	#identity-document-box {
+		padding-left: 0;
+	}
+
 	#identity-document-box .identity-document-properties {
 		display: flex;
 		flex-direction: column;
@@ -335,8 +339,8 @@
 									<COL style="width: 99%;">
 								</COLGROUP>
 								<tr>
-									<td class="nobr" colspan="2">
-										<fieldset id="identity-document-box">
+									<td class="nobr" colspan="2" id="identity-document-box">
+										<fieldset>
 											<legend class="bold">
 												{trans("Identity document")}
 											</legend>
