--- a/templates/default/invoice/invoicecontents.html
+++ b/templates/default/invoice/invoicecontents.html
@@ -348,7 +348,8 @@
                         <td>
                             <div id="tariff-selection">
                                 {block name="`$layout.module`-tariff-selection"}
-                                    <select size="1" name="tariffid" id="tariff-select" style="width: 300px" onchange="setItem(document.contents.tariffid.value)">
+                                    <select size="1" name="tariffid" id="tariff-select" style="width: 300px"
+                                        class="lms-ui-advanced-select" onchange="setItem(document.contents.tariffid.value)">
                                         <option value="0">- {trans("Select tariff")} -</option>
                                         {foreach $tariffs as $tariff}
                                             {if $tariff.currency == $invoice.currency && $tariff.netflag == $invoice.netflag}
