enhancement: implemented identity document expiration date - never expires support (visual polish)

--- a/templates/default/customer/customerinfobox.html
+++ b/templates/default/customer/customerinfobox.html
@@ -243,16 +243,16 @@
 												{$customerinfo.icn|escape}
 												{icon name="copy" class="lms-ui-button-clipboard" data_clipboard_text=$customerinfo.icn}
 												{if $customerinfo.icexpires !== ''}
-													{textformat assign="icexpires"}{strip}
-													<span{if $customerinfo.icexpires && $customerinfo.icexpires - time() < 31 * 86400} class="lms-ui-alert bold"{/if}>
-														{if $customerinfo.icexpires}
-															({t a=$customerinfo.icexpires|date_format:"%Y/%m/%d"}expires $a{/t})
-														{else}
-															({trans("never expires")})
-														{/if}
-													</span>
-													{/strip}{/textformat}
-													{$icexpires}
+													{if $customerinfo.icexpires}
+														{textformat assign="icexpires"}{strip}
+															<span{if $customerinfo.icexpires - time() < 31 * 86400} class="lms-ui-alert bold"{/if}>
+																{$customerinfo.icexpires|date_format:"%Y/%m/%d"}
+															<span>
+														{/strip}{/textformat}
+														({t a=$icexpires}expires $a{/t})
+													{elseif $customerinfo.icexpires === '0'}
+														({trans("never expires")})
+													{/if}
 												{/if}
 											</td>
 										</tr>
