improvement: added 'phpui.customer_event_limit' configuration variable support which controls limit of displayed events in customer event box ('10' by default; '-1' means no limit)

--- a/templates/default/node/nodeedit.html
+++ b/templates/default/node/nodeedit.html
@@ -60,7 +60,7 @@
 	{include file="customer/customermessages.html" limit=10}
 {/block}
 {block name="customerevents"}
-	{include file="customer/customerevents.html" limit=10}
+	{include file="customer/customerevents.html" limit=ConfigHelper::getConfig('phpui.customer_event_limit', 10)}
 {/block}
 {block name="customergroups"}
 	{include file="customer/customergroups.html"}
