improvement: deny invoice note saving when invoice positions were not changed -fix (chilek/lms-plus#1903)

--- a/templates/default/invoice/invoicenotemodify.html
+++ b/templates/default/invoice/invoicenotemodify.html
@@ -17,6 +17,20 @@
 <script src="js/lms-ui-deadline-selection.js"></script>
 <script>
 
+	$(function () {
+		checkChanges();
+	});
+
+	function checkChanges() {
+		let contentDiff = '{$cnote.content_diff}';
+		console.log('test = ',contentDiff)
+		if (!parseInt(contentDiff)) {
+			alertDialog($t("Nothing has changed in positions of the document!"));
+			return;
+		}
+
+	}
+
 	function saveInvoice() {
 		$('.invoice-contents-field-grossprice').prop('disabled', false);
 		$('.invoice-contents-field-netprice').prop('disabled', false);
