enhancement: ticket watching support (first stage of chilek/lmsplus #1597)

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -46,6 +46,28 @@
   }
 }
 
+.lms-ui-icon-watch,
+.lms-ui-icon-start-watch,
+.lms-ui-icon-watch-start {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-eye;
+  }
+}
+
+.lms-ui-icon-unwatch,
+.lms-ui-icon-stop-watch,
+.lms-ui-icon-watch-stop {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-eye-slash;
+  }
+}
+
 .lms-ui-icon-tariff-limit {
   .fa-icon;
   .fas;
