--- a/templates/default/indicators.html
+++ b/templates/default/indicators.html
@@ -20,6 +20,10 @@
     <i class="lms-ui-indicator-icon lms-ui-icon-verifier"></i>
     <span class="lms-ui-indicator-counter">0</span>
 </a>
+<a href="?m=indicators&action=watching" class="lms-ui-indicator" title="{trans("Watched tickets")}" id="indicator-watching" style="display:none; color: darkred;">
+    <i class="lms-ui-indicator-icon lms-ui-icon-watch"></i>
+    <span class="lms-ui-indicator-counter">0</span>
+</a>
 <a href="?m=indicators&action=left" class="lms-ui-indicator" title="{trans("<!rt>Tickets left")}" id="indicator-left" style="display:none; color: black">
     <i class="lms-ui-indicator-icon lms-ui-icon-helpdesk"></i>
     <span class="lms-ui-indicator-counter">0</span>
