--- a/templates/default/customer/customergroups.html
+++ b/templates/default/customer/customergroups.html
@@ -100,7 +100,7 @@
 				{button icon="delete" label="Delete" id="delete-groups"}
 {if !empty($othercustomergroups)}
 				{button icon="add" label="Add" id="add-groups" tip="Add customer to groups"}
-				<SELECT NAME="customergroupid[]" {tip text="Select group to attribute to customer" class="lms-ui-multiselect"}
+				<SELECT NAME="customergroupid[]" class="lms-ui-advanced-select" {tip text="Select group to attribute to customer"}
 						form="customergroupassignment" multiple>
 					{foreach $othercustomergroups as $customergroup}
 					<OPTION VALUE="{$customergroup.id}">{$customergroup.name} ({$customergroup.id|string_format:"%04d"})</OPTION>
